Fixed an issue with label positioning, removed animation that mis-aligned the HTML dividers. Also added some comments. Updated index.html to include three example barcharts.

--- a/style.css
+++ b/style.css
@@ -1,9 +1,8 @@
 .label {
-    margin: 0;
-    position: absolute;
-    top: 50%;
-    left:50%;
-    font-size: 1em;
+    width: 100%;
+    text-align: center;
+    position: absolute;    
+    font-size: 20px;
   }
 
 .barchart {
@@ -23,9 +22,20 @@
     color:"black";
     text-align:center;
     float:left;
-    font-size: 2em;
+    font-size: 20px;
 
 }
 .tick {
   font-size: 20px;
+}
+.axis{
+
+  background-color: black;
+}
+
+p{
+  font-size: 25px;
+}
+ul{
+  font-size: 25px;
 }
